--- a/Company.html
+++ b/Company.html
@@ -59,7 +59,7 @@ body {
         </div>
     </div>
 <div class="qiye-right" id="div1">
-<p>海德在线成立于2014年3月，是目前中国少数以构建汽车后市场生态产业链为己任的互联网公司，旗下"91车助手"品牌、也是中国目前最具活力的车生活服务平台之一，总部位于年轻美丽而又充满激情与活力的深圳。
+<p>&nbsp &nbsp &nbsp &nbsp 海德在线成立于2014年3月，是目前中国少数以构建汽车后市场生态产业链为己任的互联网公司，旗下"91车助手"品牌、也是中国目前最具活力的车生活服务平台之一，总部位于年轻美丽而又充满激情与活力的深圳。
 <br/>&nbsp &nbsp &nbsp &nbsp "让移动科技改变汽车本地生活"------是海德在线的使命，目前海德在线把为用户提供"一站式的线上线下服务"作为我们唯一的战略目标，为其提供更加便捷、透明、质优、价廉的超值体验。海德在线同时打造中国汽车服务产业最大、最全、最专业的网络社区，满足车主、服务商以及其他伙伴在线专家解答、沟通、资讯、商务、展示、分享、等方面的需求。
 
 <br/>&nbsp &nbsp &nbsp &nbsp 海德在线以"海纳百川、德行天下"为企业宗旨，树立了"激情、 创新、价值"的核心价值观， 塑造了"分享、包容、真诚"的文化品格。  从而构建起海德在线独特的企业文化和战略精髓。</span>
@@ -67,7 +67,7 @@ body {
 <br/>&nbsp &nbsp &nbsp &nbsp 展望未来，我们希望把海德在线做成一家受人尊敬的企业。我们真诚的希望能与所有伙伴分享，能与所有伙伴携手，帮助中国亿万车主获得更加超值的价值体验，帮助更多的汽车服务提供商以及配套产品提供商，获得更加良性与公平的市场竞争环境。
 </div>
 <div class="qiye-right" id="div2" style="overflow:auto;height:556px;">
-<p><span style=" font-size:24px">海纳百川，德行天下</span>
+<p><span style=" font-size:24px; color:#F90">海纳百川，德行天下</span>
 
 <br/>&nbsp &nbsp &nbsp &nbsp 这句简单、但每一位海德在线同仁都非常熟悉的话，传递出一个强有力的声音，那就是凡成大事者，必定拥有良好的心态以及远大的格局，并且还需谨记《朱子治家格言》"德不配位""必有灾殃"。任何企业都不可能比人的"心"还要强大，比人的"德"还重要，因为是"人"给予企业生命，"德"赋予企业灵魂。而企业自身不能创造产品、不能提供服务、也不能解决问题，但"人"可以，"人"才是海德在线之根本，是企业实现可持续发展的核心竞争力。
 <br/>&nbsp &nbsp &nbsp &nbsp 海德在线的同仁们；
@@ -96,7 +96,7 @@ body {
 </div>
 
 <div class="qiye-right" id="div3" style="overflow:auto;height:556px;">
-<p><img src="images/fzlz.png" width="600" height="702" /></p>
+<img src="images/fzlz.png" width="600" height="702" style=" margin-left:35px" />
 </div>
 <div class="qiye-right" id="div4">
 <p>    海德在线致力于成为活服母!</p>
