--- a/Enterprise-culture.html
+++ b/Enterprise-culture.html
@@ -65,16 +65,17 @@ body {
 </div>
 
 <div class="qiye-right" id="div2">
-<p><span style=" font-size:24px; line-height:60px; color:#F90"">让移动科技改变汽车本地生活</span>
-<br/>1.深根本地区域、面对不同用户，运用移动互联网技术提供差异化的产品和服务
+<p style=" font-size:24px ;color:#F90">让移动科技改变汽车本地生活</p>
+<p>1.深耕本地区域，面对不同用户，运用移动互联网技术提供差异化的产品和服务
 <br/>2.运用移动互联网技术，将我们的产品和服务，源源不断融入到我们的汽车本地生活，为用户带来带来便捷和透明；
-<br/>3.打造开放共赢平台，与合作伙伴共同营造健康的互联网生态环境</p>
+<br/>3.打造开放共赢平台，与合作伙伴共同营造健康的互联网生态环境
+</p>
 </div>
 
 <div class="qiye-right" id="div3">
 <p><span style=" font-size:24px; color:#F90">海纳百川、德行天下</span>
-
-<br/>&nbsp &nbsp &nbsp &nbsp ------凡成大事者，必定拥有良好的心态以及远大的格局，要像大海般能容得下千百条江河之水。并且还需谨记《朱子治家格言》"德不配位""必有灾殃"。任何企业都不可能比人的"心"还要强大，比人的"德"还重要，因为是"人"给予企业生命，"德"赋予企业灵魂。而企业自身不能创造产品、不能提供服务、也不能解决问题，但"人"可以，"人"才是海德在线之根本，是企业实现可持续发展的核心竞争力。
+<p>
+&nbsp &nbsp &nbsp &nbsp ------凡成大事者，必定拥有良好的心态以及远大的格局，要像大海般能容得下千百条江河之水。并且还需谨记《朱子治家格言》"德不配位""必有灾殃"。任何企业都不可能比人的"心"还要强大，比人的"德"还重要，因为是"人"给予企业生命，"德"赋予企业灵魂。而企业自身不能创造产品、不能提供服务、也不能解决问题，但"人"可以，"人"才是海德在线之根本，是企业实现可持续发展的核心竞争力。
 
 </p>
 </div>
@@ -91,29 +92,29 @@ body {
 <strong style="font-size:18px; color:#F90"">创新</strong>
 <br/>
 &nbsp &nbsp &nbsp &nbsp 我们对创新的定义是：一种永不满足的追求，它的本质是突破，它的目标是创造更大价值。颠覆传统，敢于否定自己，努力尝试新的思维我们极为重视重大的、全新的、有意义的、贴近工作目标的创新；做一个敢想，而且是毫无边际的大胆畅想的人。（有想法的人是最值得尊敬的人）
-<br/>我们都要提醒自己善于发现，敢于怀疑，学会变通，超越经验；
-<br/>我们相信解决问题的方法没有最好，只有更好；
-<br/>我们积极思考，勇于尝试，而不是不加思考的简单执行；
-<br/>我们敢于面对失败，向优秀的、有思想的、有想法的同事以及前辈学习，请教。当每天忙于处理反复出现的问题，我们应停下来想想问题产生的原因，从源头加以杜绝；
-<br/>如果公司的相关制度不满，我们要大胆提出自己的想法和建议，使制度变得更为合理、便于执行；
-<br/>我们不甘于平庸，我们随时愿意接受新的有益的东西；
-<br/>我们注重速度和灵活性；
-<br/>我们拥护变革，嘉奖进步、颂扬成果。
+<br/>&nbsp &nbsp &nbsp &nbsp 我们都要提醒自己善于发现，敢于怀疑，学会变通，超越经验；
+<br/>&nbsp &nbsp &nbsp &nbsp 我们相信解决问题的方法没有最好，只有更好；
+<br/>&nbsp &nbsp &nbsp &nbsp 我们积极思考，勇于尝试，而不是不加思考的简单执行；
+<br/>&nbsp &nbsp &nbsp &nbsp 我们敢于面对失败，向优秀的、有思想的、有想法的同事以及前辈学习，请教。当每天忙于处理反复出现的问题，我们应停下来想想问题产生的原因，从源头加以杜绝；
+<br/>&nbsp &nbsp &nbsp &nbsp 如果公司的相关制度不满，我们要大胆提出自己的想法和建议，使制度变得更为合理、便于执行；
+<br/>&nbsp &nbsp &nbsp &nbsp 我们不甘于平庸，我们随时愿意接受新的有益的东西；
+<br/>&nbsp &nbsp &nbsp &nbsp 我们注重速度和灵活性；
+<br/>&nbsp &nbsp &nbsp &nbsp 我们拥护变革，嘉奖进步、颂扬成果。
 <br/>
 <strong style="font-size:18px;color:#F90">价值</strong>
 <br/>
 <strong>自我价值</strong><br/>&nbsp &nbsp &nbsp &nbsp 劳动是一切价值的唯一源泉，而决定事物生存与发展的根本前途的决定性因素不是该事物的投入产出比，而是该事物的价值率，决定人对于事物的根本态度的决定性因素也不是该事物的投入产出比，还是该事物的价值率。由此，衡量自我价值的唯一标准，就是自我价值率，实实在在地增强自己生存与发展的能力，不断追求自身生存与发展的能力，就是不断提升自我价值的过程。
-一个人的自我价值是在成长过程中建立起来的，自我完善的过程。我们希望您在加入海德的那一刻起，就与海德共同成长，共同进步，共同超越！
+&nbsp &nbsp &nbsp &nbsp 一个人的自我价值是在成长过程中建立起来的，自我完善的过程。我们希望您在加入海德的那一刻起，就与海德共同成长，共同进步，共同超越！
 <br/>
 <strong>社会价值</strong><br/>&nbsp &nbsp &nbsp &nbsp 海德在线是一个有共同目标，共同价值观的社会团体，如何衡量个人对于海德在线的价值，取决于每个人对于这个"社会"的贡献度。德国著名诗人歌德曾说过："你若要喜爱自己的价值，你就得给世界创造价值。"爱因斯坦也曾经这样说过："人只有贡献于社会，才能找出那实际工作上短暂而有风险的生命意义。"
-<br/>从能量角度看价值，从价值角度看海德。较高的自我价值让我们有勇气去从事各项事务、去竞争，从而为自己获得机会，为公司创造机会，赢得社会地位。
+<br/>&nbsp &nbsp &nbsp &nbsp 从能量角度看价值，从价值角度看海德。较高的自我价值让我们有勇气去从事各项事务、去竞争，从而为自己获得机会，为公司创造机会，赢得社会地位。
 <br/>
 <br/>
 </p>
 </div>
 
 <div class="qiye-right" id="div5" style="overflow:auto;height:556px;">
-<p><br/><span style="font-size:18px"><strong style=" font-size:18px; color:#F90">分享</strong></span> 
+<p><span style="font-size:18px"><strong style=" font-size:18px; color:#F90">分享</strong></span> 
 <br/>&nbsp &nbsp &nbsp &nbsp 分享是海德在线的行为主张，我们的每一位同仁都拥有这一种大智慧。
 <br/>&nbsp &nbsp &nbsp &nbsp 我们每天都敞开胸怀，分享所有工作伙伴的经验、思想和快乐。
 <br/>&nbsp &nbsp &nbsp &nbsp 我们每天将自己的所思所得主动与每一位伙伴交流，以求协作，共同进步。
@@ -133,31 +134,36 @@ body {
 <br/>&nbsp &nbsp &nbsp &nbsp 海德在线的文化DNA---鲨鱼文化
 <img src="images/shayu.jpg" width="600" height="369" />
 <br/>
-<strong>&nbsp &nbsp &nbsp &nbsp 心中有梦想,脚下就有路。与其仰天长叹上天不公,不如做一条奋力游动的鲨鱼,化短为长,闯出属于我们自己的强者之路,完成我们自己的人生跨越。 </strong><br/>
+<br/>
+&nbsp &nbsp &nbsp &nbsp 心中有梦想,脚下就有路。与其仰天长叹上天不公,不如做一条奋力游动的鲨鱼,化短为长,闯出属于我们自己的强者之路,完成我们自己的人生跨越。<br/>
+<br/>
 <img src="images/whpg.png" width="556" height="313" />
 <br/>
-<strong>&nbsp &nbsp &nbsp &nbsp 再强大的个人，也会有鞭长莫及的破绽；再渺小的个体，只要组成团队，相互合作，就会爆发出无法想象的力量! </strong><br/>
+<br/>
+&nbsp &nbsp &nbsp &nbsp 再强大的个人，也会有鞭长莫及的破绽；再渺小的个体，只要组成团队，相互合作，就会爆发出无法想象的力量!<br/>
 </br>
  </p>
 </div>
 
 <div class="qiye-right" id="div6">
-<p style=" font-size:24px; color:#F90">把用户体验做到极致，超出用户期望的价值体验 </p>
+<p>把用户体验做到极致，超出用户期望的价值体验 </p>
 </div>
 
 <div class="qiye-right" id="div7">
-<p><span style="font-size:36px; color:#F90">以人为本</span><span style=" padding-left:100px;font-size:36px; color:#F90">数据制胜</span></p>
-<p style=" font-size:16px"><br/>
-  <strong>•管理工作的基本原则</strong><br/>•  基于数据的管理 
-<br/>•  基于共同价值观的领导 
-<br/>•以工作节点为管理基础 
-<br/>•  以结果为导向 
-<br/>
-<strong>•管理的几个点</strong>
-<br/>•每天看达成 
-<br/>•每周看计划                 
-<br/>•每月看利润  
-<br/>•季度看KPI               
+<p><img src="images/yrwb.jpg" width="600"/></p>
+<p style=" font-size:16px; float:left; padding-right:120px">
+  <strong>管理工作的基本原则</strong>
+  <br/>• &nbsp 基于数据的管理 
+<br/>• &nbsp 基于共同价值观的领导 
+<br/>• &nbsp 以工作节点为管理基础 
+<br/>• &nbsp 以结果为导向 
+</p>
+<p style=" float:left; font-size:16px;">
+<strong>管理的几个点</strong>
+<br/>• &nbsp 每天看达成 
+<br/>• &nbsp 每周看计划                 
+<br/>• &nbsp 每月看利润  
+<br/>• &nbsp 季度看KPI               
 </p>
 </div>
 
