--- a/Company.html
+++ b/Company.html
@@ -99,7 +99,7 @@ body {
 <img src="images/fzlz.png" width="600" height="702" style=" margin-left:35px" />
 </div>
 <div class="qiye-right" id="div4">
-<p>    海德在线致力于成为活服母!</p>
+<img src="images/jgtzz.png" width="600"/>
 </div>
 <div class="qiye-right" id="div5" style="overflow:auto;height:556px;">
 <p class="qiye-ld"><img src="images/ceo.jpg" width="196" height="147" /><br /><span style="padding-left:60px">创始人--CEO程平</span></p>
