--- a/Cooperation-talks.html
+++ b/Cooperation-talks.html
@@ -64,7 +64,7 @@ body {
 <br/>400电话：4008050095
 <br/>总    机：0755-28347393
 <br/>地    址：深圳市龙岗区丹竹头立信路43号永昌大厦6楼</span></p>
-<p style=" margin-left:20px">
+
 
 <!--引用百度地图API-->
 <style type="text/css">
@@ -75,7 +75,8 @@ body {
 <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
 
   <!--百度地图容器-->
-  <div style="width:600px;height:200px;border:#ccc solid 1px;" id="dituContent"></div>
+  <br/>
+  <div style="width:620px;height:300px;border:#ccc solid 1px; margin-left:30px" id="dituContent"></div>
 
 <script type="text/javascript">
     //创建和初始化地图函数：
