--- a/Enterprise-culture.html
+++ b/Enterprise-culture.html
@@ -196,12 +196,12 @@ body {
 </div>
 
 <div class="qiye-right" id="div10" style=" line-height:60px;">
-<p><br/>•不得从事与本公司工作无关的其他任何事情 
-<br/>•不得泄露与公司有关的（包括保密协议规定范围）任何机密 
-<br/>•不得危及公司核心利益
-<br/>•不得触及职业道德底线
-<br/>•不得触犯国家法律法规
-<br/>•一经发现查出，立即予以开除 。并追究因此为公司造成的损失以及潜在损失。情节严重的将追究其法律责任。
+<p>•&nbsp 不得从事与本公司工作无关的其他任何事情 
+<br/>•&nbsp 不得泄露与公司有关的（包括保密协议规定范围）任何机密 
+<br/>•&nbsp 不得危及公司核心利益
+<br/>•&nbsp 不得触及职业道德底线
+<br/>•&nbsp 不得触犯国家法律法规
+<br/>•&nbsp 一经发现查出，立即予以开除 。并追究因此为公司造成的损失以及潜在损失。情节严重的将追究其&nbsp &nbsp &nbsp 法律责任。
 <p>
 </div>
 
