--- a/Company.html
+++ b/Company.html
@@ -17,7 +17,7 @@
 <div class="page">
 
 <div class="logo">
-<span><img src="images/logo.png" width="303" height="155" /></span><span style=" padding-left:80px;  position:relative;position:absolute;top:105px"><img src="images/hlbq.png" width="513" height="52" /></span>
+<span><img src="images/logo.png" width="303" height="155" /></span><span style=" padding-left:40px;  position:relative;position:absolute;top:105px"><img src="images/jqcxjz.png" width="630"/></span>
 </div>
 <div class="menu">
 <ul>
@@ -58,8 +58,7 @@
 <br/>&nbsp &nbsp &nbsp &nbsp 展望未来，我们希望把海德在线做成一家受人尊敬的企业。我们真诚的希望能与所有伙伴分享，能与所有伙伴携手，帮助中国亿万车主获得更加超值的价值体验，帮助更多的汽车服务提供商以及配套产品提供商，获得更加良性与公平的市场竞争环境。
 </div>
 <div class="qiye-right" id="div2" style="overflow:auto;height:556px;">
-<div class="article-title">海纳百川，德行天下</div>
-
+<p style="font-size:18px">海纳百川，德行天下</p>
 <p>&nbsp &nbsp &nbsp &nbsp 这句简单、但每一位海德在线同仁都非常熟悉的话，传递出一个强有力的声音，那就是凡成大事者，必定拥有良好的心态以及远大的格局，并且还需谨记《朱子治家格言》"德不配位""必有灾殃"。任何企业都不可能比人的"心"还要强大，比人的"德"还重要，因为是"人"给予企业生命，"德"赋予企业灵魂。而企业自身不能创造产品、不能提供服务、也不能解决问题，但"人"可以，"人"才是海德在线之根本，是企业实现可持续发展的核心竞争力。
 <br/>&nbsp &nbsp &nbsp &nbsp 海德在线的同仁们；
 <br/>&nbsp &nbsp &nbsp &nbsp 在科技日新月异，经济飞速发展的今天，计算机和互联网尤其是移动互联网的高速发展，给我们周围的生活带来了巨大的影响和变化。而这些高速发展和变化、将改变现有的汽车售后市场格局以及汽车本地生活服务产业。我在感受这种发展和变化的同时，为自己有幸领导、参与构建"汽车全生命周期、线上线下贯通的信息消费服务生态"的梦想而激动不已。
@@ -77,11 +76,12 @@
 马云说过；梦想还是要有的，万一实现了呢？
 是的，不去尝试一下，如何知道未来能成功？
 我们共同迎来了时代的转折点，恭喜你，你已经已经站在了走向成功的门槛上，驶向自己的未来。
+</p>
+<p style="float:right; padding-right:50px">
+<br/><span style="font-size:24px; line-height:50px">深圳海德在线有限公司</span>
+<br /><span style="font-size:18px">董事长兼CEO</span>
 
-<br/>海德在线有限公司
-<br />董事长兼CEO
-
-<br/>程平</p>
+<br/><img src="images/cp.png" /><br/><br/></p>
 
 </div>
 
@@ -89,7 +89,7 @@
 <img src="images/fzlz.png" width="600" height="702" style=" margin-left:35px" />
 </div>
 <div class="qiye-right" id="div4">
-<img src="images/jgtzz.png" width="600"/>
+<img src="images/jgtzz.png"/>
 </div>
 <div class="qiye-right" id="div5" style="overflow:auto;height:556px;">
     <div class="member-list">
@@ -233,9 +233,22 @@
                             </div>
                         </div>
 
+              <div class="member-item">
+                            <div class="member-pic">
+                                <img src="images/kele.jpg"/>
+                            </div>
+                            <div class="member-text">
+                                <p><span class="member-name">芦城市</span>商务拓展中心</p>
+                                <p>花名<span class="member-nickname">捷达</span></p>
+                                <p>1981年出厂，产地：湖北随州。身高180cm，体重60公斤，是正宗的长腿欧巴，性格上，是一个很执着的人，坚持自己认定的目标，并为之付出120%的努力，能力可以不断提升，唯有坚持才能够持续攻克每一个难关，越走越远。我最开心的事是和同事们分享每一个成功之后的喜悦，我是可乐，我喂自己袋盐。
+</p>
+                            </div>
+                        </div>
+
+
                         <div class="member-item">
                             <div class="member-pic">
-                                <img src="images/gjjs.jpg"/>
+                                <img src="images/zhjl.jpg"/>
                             </div>
                             <div class="member-text">
                                 <p><span class="member-name">邱承志</span>字小倩；综合推广</p>
@@ -248,7 +261,7 @@
 
                         <div class="member-item">
                             <div class="member-pic">
-                                <img src="images/jszj.jpg"/>
+                                <img src="images/cpjl.jpg"/>
                             </div>
                             <div class="member-text">
                                 <p><span class="member-name">温元达</span>产品经理</p>
@@ -305,6 +318,8 @@
 <li><a href="products.html?page=the91carhelper" targetDiv="div1">91车助手</a></li>
 <li><a href="products.html?page=the98carnews" targetDiv="div2">98车讯</a></li>
 <li><a href="products.html?page=tthcc" targetDiv="div3">天天回程车</a></li>
+<li><a href="products.html?page=shenzhen" targetDiv="div4">深圳分公司</a></li>
+<li><a href="products.html?page=guangzhou" targetDiv="div5">广州分公司</a></li>
 </ul>
 
 </div>
@@ -346,7 +361,7 @@
 
 
 </div>
-<div class="address"><a href="Legal-Disclaimer.html">法律声明</a> |  <a href="Privacy-protection.html">隐私保护</a>  |  网站地图版权所有 © 海德在线有限公司 1998-2014。 保留一切权利。粤A2-20044005号</div>
+<div class="address"><a href="Legal-Disclaimer.html">法律声明</a> |  <a href="Privacy-protection.html">隐私保护</a>  |  网站地图版权所有 © 海德在线有限公司 2014 保留一切权利。</div>
 </div>
 
 </div>
