--- a/news.html
+++ b/news.html
@@ -37,9 +37,9 @@
 				<div class="qiye-tiitle-xian"></div>
 				<div class="qiye-list">
 					<ul id="nav">
-						<li class="active"><a href="#" targetDiv="div1">公司新闻</a></li>
-                        <li><a href="#" targetDiv="div2">行业资讯</a></li>
-                       <li><a href="#" targetDiv="div3">企业公布</a></li>
+						<li id="gsxw" class="active"><a href="#" targetDiv="div1">公司新闻</a></li>
+                        <li id="xyxw"><a href="#" targetDiv="div2">行业资讯</a></li>
+                       <li id="xygb"><a href="#" targetDiv="div3">企业公布</a></li>
                     
 					</ul>
 				</div>
@@ -167,6 +167,8 @@
 <li><a href="products.html?page=the91carhelper" targetDiv="div1">91车助手</a></li>
 <li><a href="products.html?page=the98carnews" targetDiv="div2">98车讯</a></li>
 <li><a href="products.html?page=tthcc" targetDiv="div3">天天回程车</a></li>
+<li><a href="products.html?page=shenzhen" targetDiv="div4">深圳分公司</a></li>
+<li><a href="products.html?page=guangzhou" targetDiv="div5">广州分公司</a></li>
 </ul>
 
 </div>
@@ -208,7 +210,7 @@
 
 
 </div>
-<div class="address"><a href="Legal-Disclaimer.html">法律声明</a> |  <a href="Privacy-protection.html">隐私保护</a>  |  网站地图版权所有 © 海德在线有限公司 1998-2014。 保留一切权利。粤A2-20044005号</div>
+<div class="address"><a href="Legal-Disclaimer.html">法律声明</a> |  <a href="Privacy-protection.html">隐私保护</a>  |  网站地图版权所有 © 海德在线有限公司 2014 保留一切权利。</div>
 </div>
 
 </div>
