--- a/Enterprise-culture.html
+++ b/Enterprise-culture.html
@@ -14,7 +14,7 @@
 <div class="page">
 
 <div class="logo">
-<span><img src="images/logo.png" width="303" height="155" /></span><span style=" padding-left:80px;  position:relative;position:absolute;top:105px"><img src="images/hlbq.png" width="513" height="52" /></span>
+<span><img src="images/logo.png" width="303" height="155" /></span><span style=" padding-left:40px;  position:relative;position:absolute;top:105px"><img src="images/fsbrzc.png"/></span>
 </div>
 <div class="menu">
 <ul>
@@ -54,7 +54,7 @@
             
 <div class="qiye-right" id="div1">
 <div class="article-title">构建汽车全生命周期线上线下贯通的生态产业链</div>
-<p><img src="images/yj.png" width="556" height="253" /></p>
+<p style="padding-left:40px"><img src="images/yj.png" /></p>
 </div>
 
 <div class="qiye-right" id="div2">
@@ -129,7 +129,7 @@
 <br/>
 &nbsp &nbsp &nbsp &nbsp 心中有梦想,脚下就有路。与其仰天长叹上天不公,不如做一条奋力游动的鲨鱼,化短为长,闯出属于我们自己的强者之路,完成我们自己的人生跨越。<br/>
 <br/>
-<img src="images/whpg.png" width="556" height="313" />
+<img src="images/whpg.png" width="556" height="313" style="padding-left:40px" />
 <br/>
 <br/>
 &nbsp &nbsp &nbsp &nbsp 再强大的个人，也会有鞭长莫及的破绽；再渺小的个体，只要组成团队，相互合作，就会爆发出无法想象的力量!<br/>
@@ -217,6 +217,8 @@
 <li><a href="products.html?page=the91carhelper" targetDiv="div1">91车助手</a></li>
 <li><a href="products.html?page=the98carnews" targetDiv="div2">98车讯</a></li>
 <li><a href="products.html?page=tthcc" targetDiv="div3">天天回程车</a></li>
+<li><a href="products.html?page=shenzhen" targetDiv="div4">深圳分公司</a></li>
+<li><a href="products.html?page=guangzhou" targetDiv="div5">广州分公司</a></li>
 </ul>
 
 </div>
@@ -258,7 +260,7 @@
 
 
 </div>
-<div class="address"><a href="Legal-Disclaimer.html">法律声明</a> |  <a href="Privacy-protection.html">隐私保护</a>  |  网站地图版权所有 © 海德在线有限公司 1998-2014。 保留一切权利。粤A2-20044005号</div>
+<div class="address"><a href="Legal-Disclaimer.html">法律声明</a> |  <a href="Privacy-protection.html">隐私保护</a>  |  网站地图版权所有 © 海德在线有限公司 2014 保留一切权利。</div>
 </div>
 
 </div>
