--- a/Investors.html
+++ b/Investors.html
@@ -14,7 +14,7 @@
 <div class="page">
 
 <div class="logo">
-<span><img src="images/logo.png" width="303" height="155" /></span><span style=" padding-left:80px;  position:relative;position:absolute;top:105px"><img src="images/hlbq.png" width="513" height="52" /></span>
+<span><img src="images/logo.png" width="303" height="155" /></span><span style=" padding-left:40px;  position:relative;position:absolute;top:80px"><img src="images/xsxx.png"  /></span>
 </div>
 <div class="menu">
 <ul>
@@ -48,44 +48,44 @@
 </div>
 <div class="qiye-right" id="div1">
 <p><span style=" font-size:16px">400电话：4008050095
-<br/>总    机：0755-28347393
-<br/>地    址：深圳市龙岗区丹竹头立信路43号永昌大厦6楼</span></p>
+<br/>总    机：0755-66640096
+<br/>地    址：深圳市南山区高新中四道研祥科技大厦6A</span></p>
 </div>
 <div class="qiye-right" id="div2" style="overflow:auto;height:556px;">
 <p><span style=" font-size:16px">400电话：4008050095
-<br/>总    机：0755-28347393
-<br/>地    址：深圳市龙岗区丹竹头立信路43号永昌大厦6楼</span></p>
+<br/>总    机：0755-66640096
+<br/>地    址：深圳市南山区高新中四道研祥科技大厦6A</span></p>
 
 </div>
 
 <div class="qiye-right" id="div3">
 <p><span style=" font-size:16px">400电话：4008050095
-<br/>总    机：0755-28347393
-<br/>地    址：深圳市龙岗区丹竹头立信路43号永昌大厦6楼</span></p>
+<br/>总    机：0755-66640096
+<br/>地    址：深圳市南山区高新中四道研祥科技大厦6A</span></p>
 </div>
 
 <div class="qiye-right" id="div4">
 <p><span style=" font-size:16px">400电话：4008050095
-<br/>总    机：0755-28347393
-<br/>地    址：深圳市龙岗区丹竹头立信路43号永昌大厦6楼</span></p>
+<br/>总    机：0755-66640096
+<br/>地    址：深圳市南山区高新中四道研祥科技大厦6A</span></p>
 </div>
 
 <div class="qiye-right" id="div5">
 <p><span style=" font-size:16px">400电话：4008050095
-<br/>总    机：0755-28347393
-<br/>地    址：深圳市龙岗区丹竹头立信路43号永昌大厦6楼</span></p>
+<br/>总    机：0755-66640096
+<br/>地    址：深圳市南山区高新中四道研祥科技大厦6A</span></p>
 </div>
 
 <div class="qiye-right" id="div6">
 <p><span style=" font-size:16px">400电话：4008050095
-<br/>总    机：0755-28347393
-<br/>地    址：深圳市龙岗区丹竹头立信路43号永昌大厦6楼</span></p>
+<br/>总    机：0755-66640096
+<br/>地    址：深圳市南山区高新中四道研祥科技大厦6A</span></p>
 </div>
 
 <div class="qiye-right" id="div7">
 <p><span style=" font-size:16px">400电话：4008050095
-<br/>总    机：0755-28347393
-<br/>地    址：深圳市龙岗区丹竹头立信路43号永昌大厦6楼</span></p>
+<br/>总    机：0755-66640096
+<br/>地    址：深圳市南山区高新中四道研祥科技大厦6A</span></p>
 </div>
 
 <div class="yu"></div>
@@ -110,6 +110,8 @@
 <li><a href="products.html?page=the91carhelper" targetDiv="div1">91车助手</a></li>
 <li><a href="products.html?page=the98carnews" targetDiv="div2">98车讯</a></li>
 <li><a href="products.html?page=tthcc" targetDiv="div3">天天回程车</a></li>
+<li><a href="products.html?page=shenzhen" targetDiv="div4">深圳分公司</a></li>
+<li><a href="products.html?page=guangzhou" targetDiv="div5">广州分公司</a></li>
 </ul>
 
 </div>
@@ -151,7 +153,7 @@
 
 
 </div>
-<div class="address"><a href="Legal-Disclaimer.html">法律声明</a> |  <a href="Privacy-protection.html">隐私保护</a>  |  网站地图版权所有 © 海德在线有限公司 1998-2014。 保留一切权利。粤A2-20044005号</div>
+<div class="address"><a href="Legal-Disclaimer.html">法律声明</a> |  <a href="Privacy-protection.html">隐私保护</a>  |  网站地图版权所有 © 海德在线有限公司 2014 保留一切权利。</div>
 </div>
 
 </div>
