--- a/contacts.html
+++ b/contacts.html
@@ -215,7 +215,7 @@ body {
 
 
 </div>
-<div class="address"><a href="Legal-Disclaimer.html">法律声明</a> |  <a href="Privacy-protection.html">隐私保护</a>  |  网站地图版权所有 © 海德在线有限公司 1998-2014。 保留一切权利。粤A2-20044005号</div>
+<div class="address"><a href="Legal-Disclaimer.html">法律声明</a> |  <a href="Privacy-protection.html">隐私保护</a>  |  网站地图版权所有 © 海德在线有限公司 2014 保留一切权利。</div>
 </div>
 
 </div>
