--- a/Cooperation-talks.html
+++ b/Cooperation-talks.html
@@ -250,7 +250,7 @@
     }
     
     //标注点数组
-    var markerArr = [{title:"深圳市海德在线有限公司",content:"深圳市南山区高新中四道研祥科技大厦6A",point:"113.939463|22.548145",isOpen:0,icon:{w:21,h:21,l:0,t:0,x:6,lb:5}}
+    var markerArr = [{title:"深圳市海德在线有限公司",content:"<h1>深圳市南山区高新中四道研祥科技大厦6A<br/><h1>电话：4008050095</h1><br/>",point:"113.939463|22.548145",isOpen:0,icon:{w:21,h:21,l:0,t:0,x:6,lb:5}}
 		 ];
     //创建marker
     function addMarker(){
