--- a/Company.html
+++ b/Company.html
@@ -59,28 +59,29 @@
 </div>
 <div class="qiye-right" id="div2" style="overflow:auto;height:556px;">
 <p style="font-size:18px">海纳百川，德行天下</p>
-<p>&nbsp &nbsp &nbsp &nbsp 这句简单、但每一位海德在线同仁都非常熟悉的话，传递出一个强有力的声音，那就是凡成大事者，必定拥有良好的心态以及远大的格局，并且还需谨记《朱子治家格言》"德不配位""必有灾殃"。任何企业都不可能比人的"心"还要强大，比人的"德"还重要，因为是"人"给予企业生命，"德"赋予企业灵魂。而企业自身不能创造产品、不能提供服务、也不能解决问题，但"人"可以，"人"才是海德在线之根本，是企业实现可持续发展的核心竞争力。
-<br/>&nbsp &nbsp &nbsp &nbsp 海德在线的同仁们；
-<br/>&nbsp &nbsp &nbsp &nbsp 在科技日新月异，经济飞速发展的今天，计算机和互联网尤其是移动互联网的高速发展，给我们周围的生活带来了巨大的影响和变化。而这些高速发展和变化、将改变现有的汽车售后市场格局以及汽车本地生活服务产业。我在感受这种发展和变化的同时，为自己有幸领导、参与构建"汽车全生命周期、线上线下贯通的信息消费服务生态"的梦想而激动不已。
-    <br/>&nbsp &nbsp &nbsp &nbsp 我和我的团队凭借对中国移动互联网和汽车产业发展的巨大信心，凭借对国内外汽车服务市场的深入了解，并试图先期把海德在线旗下品牌"91车助手"、打造成为"中国最具活力的车生活服务平台"。
-<br/>同仁们；
-这是消费者的时代、更是注重体验的时代。"我的消费，我做主"
-这是资源大整合的时代、更是强强联手抱团打天下、得资源者得天下的时代。
-这是大数据时代。更是注重专业比能力更强的时代。
-没有做不到，只有想不到。
-        
-<br/>&nbsp &nbsp &nbsp &nbsp 我们这是一次伟大的创业，更准确说是一场伟大的消费革命，一场颠覆所
-有车主日常消费行为习惯的革命，一场颠覆所有汽车服务商提供服务模式的革命。从历史的发展轨迹来看，每一次轰轰烈烈的革命行动，首先碰到的总是一些毫无准备的对手，总是让革命者轻而易举的攻城掠地，这也是每次革命能够不断发展壮大的原因。
+<p><br/>&nbsp &nbsp &nbsp &nbsp 这句简单、但每一位海德在线同仁都非常熟悉的话，传递出一个强有力的声音，那就是凡成大事者，必定拥有良好的心态以及远大的格局，并且还需谨记《朱子治家格言》"德不配位""必有灾殃"。任何企业都不可能比人的"心"还要强大，比人的"德"还重要，因为是"人"给予企业生命，"德"赋予企业灵魂。而企业自身不能创造产品、不能提供服务、也不能解决问题，但"人"可以，"人"才是海德在线之根本，是企业实现可持续发展的核心竞争力。
 
-<br/>&nbsp &nbsp &nbsp &nbsp 章子怡在她的电影《非常幸运》有一句台词:  "生活值得去冒险＂
-马云说过；梦想还是要有的，万一实现了呢？
-是的，不去尝试一下，如何知道未来能成功？
-我们共同迎来了时代的转折点，恭喜你，你已经已经站在了走向成功的门槛上，驶向自己的未来。
+<br/>海德在线的同仁们：
+    <br/>&nbsp &nbsp &nbsp &nbsp 在科技日新月异，经济飞速发展的今天，计算机和互联网尤其是移动互联网的高速发展，给我们周围的生活带来了巨大的影响和变化。而这些高速发展和变化、将改变现有的汽车售后市场格局以及汽车本地生活服务产业。我在感受这种发展和变化的同时，为自己有幸领导、参与构建"汽车全生命周期、线上线下贯通的信息消费服务生态"的梦想而激动不已。
+&nbsp &nbsp &nbsp &nbsp 我和我的团队凭借对中国移动互联网和汽车产业发展的巨大信心，凭借对国内外汽车服务市场的深入了解，并试图先期把海德在线旗下品牌"91车助手"、打造成为"中国最具活力的车生活服务平台"。
+
+伙伴们：
+<br/>&nbsp &nbsp &nbsp &nbsp 这是消费者的时代、更是注重体验的时代——"我的消费，我做主"
+<br/>&nbsp &nbsp &nbsp &nbsp 这是资源大整合的时代、更是强强联手抱团打天下、得资源者得天下的时代。
+<br/>&nbsp &nbsp &nbsp &nbsp 这是大数据时代，更是注重专业比能力更强的时代。
+<br/>&nbsp &nbsp &nbsp &nbsp 没有做不到，只有想不到！！！
+        
+<br/>&nbsp &nbsp &nbsp &nbsp 我们这是一次伟大的创业，更准确说是一场伟大的消费革命，一场颠覆所有车主日常消费行为习惯的革命，一场颠覆所有汽车服务商提供服务模式的革命。从历史的发展轨迹来看，每一次轰轰烈烈的革命行动，首先碰到的总是一些毫无准备的对手，总是让革命者轻而易举的攻城掠地，这也是每次革命能够不断发展壮大的原因。
+<br/>
+<br/>章子怡在她的电影《非常幸运》有一句台词:  "生活值得去冒险＂
+<br/>马云说过："梦想还是要有的，万一实现了呢？"
+<br/>是的，不去尝试一下，如何知道未来能成功？
+<br/>我们共同迎来了时代的转折点，恭喜你，你已经已经站在了走向成功的门槛上，驶向自己的未来。
 </p>
 <p style="float:right; padding-right:50px">
-<br/><span style="font-size:24px; line-height:50px">深圳海德在线有限公司</span>
+<br/><span style="font-size:24px; line-height:50px">深圳市海德在线有限公司</span>
 <br /><span style="font-size:18px">董事长兼CEO</span>
-
+<br/>
 <br/><img src="images/cp.png" /><br/><br/></p>
 
 </div>
@@ -241,7 +242,7 @@
                                 <p><span class="member-name">芦城市</span>商务拓展中心</p>
                                 <p>花名<span class="member-nickname">捷达</span></p>
                                 <p>1981年出厂，产地：湖北随州。身高180cm，体重60公斤，是正宗的长腿欧巴，性格上，是一个很执着的人，坚持自己认定的目标，并为之付出120%的努力，能力可以不断提升，唯有坚持才能够持续攻克每一个难关，越走越远。我最开心的事是和同事们分享每一个成功之后的喜悦，我是可乐，我喂自己袋盐。
-</p>
+</p><p class="sepcial">2014年加入海德在线，成为核心的创始团队成员之一。</p>
                             </div>
                         </div>
 
