--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </style>
         <link href="css/index.css" rel="stylesheet" type="text/css" />
         <SCRIPT src="images/flash_files/flash.js" type=text/javascript></SCRIPT>
-
+<script src="css/jquery.js"></script>
 <LINK href="images/flash_files/flash.css" type=text/css rel=stylesheet>
     </head>
     <body>
