--- a/news.html
+++ b/news.html
@@ -49,7 +49,7 @@
 <div class="qiye-right" id="div1" style="overflow:auto;height:556px;">
 <p>我有一个梦想
 <br />——海德在线第一次公司战略级全员头脑风暴会议圆满落幕
-<br/>&nbsp &nbsp &nbsp &nbsp 2014年9月29日至30日，海德在线在布吉甘坑客家小镇和南山青青世界举行了第一次公司战略级全员头脑风暴会议，头脑风暴会议于29日上午9:00在风景宜人的甘坑客家小镇拉开帷幕，此次头脑风暴会议由运营中心高级总监刘俊担纲主持，宣布了此次头脑风暴会议各项规则与纪律，之后，海德在线董事长兼总裁程平以激情饱满的状态就海德在线未来的走向做了主题为"我有一个梦想"的战略演讲，战略演讲详细介绍了海德在线的起源、海德在线的成长发展历程以及海德在线的商业模式、最后做出对海德在线未来的畅想，程总在会上着重指出，海德在线凝聚一群有激情有梦想的核心团队，未来海德在线的发展离不开每一个同仁的努力，要坚持以战略目标为指引，以达成阶段性战略目标为行动原则，统一思想，强化团队成员的执行力，树立"激情、价值、创新"的核心价值观，塑造"真诚、包容、分享"的文化品格，为海德在线的发展指明了方向的同时奠定了坚实的基础。
+<br/>&nbsp &nbsp &nbsp &nbsp 2014年9月29日至30日，海德在线在布吉甘坑客家小镇和南山青青世界举行了第一次公司战略级全员头脑风暴会议，头脑风暴会议于29日上午9:00在风景宜人的甘坑客家小镇拉开帷幕，此次头脑风暴会议由运营中心高级总监刘俊担纲主持，宣布了此次头脑风暴会议各项规则与纪律，之后，海德在线董事长兼总裁程平以激情饱满的状态就海德在线未来的走向做了主题为"我有一个梦想"的战略演讲，战略演讲详细介绍了海德在线的起源、海德在线的成长发展历程以及海德在线的商业模式、最后做出对海德在线未来的畅想，程总在会上着重指出，海德在线凝聚一群有激情有梦想的核心团队，未来海德在线的发展离不开每一个同仁的努力，要坚持以战略目标为指引，以达成阶段性战略目标为行动原则，统一思想，强化团队成员的执行力，树立"激情、创新、价值"的核心价值观，塑造"真诚、包容、分享"的文化品格，为海德在线的发展指明了方向的同时奠定了坚实的基础。
 <br/>&nbsp &nbsp &nbsp &nbsp 在程总做完战略演讲之后由运营中心高级总监刘俊针对程总的战略做了阶段性的运营战术规划，刘总深入领会了程总的战略意图，对程总的阶段性目标战略做出了详细的分解，为达成阶段性战略目标提供了明确的执行路径，让全体同仁在了解我们海德在线战略方向的同时明白了具体的实施策略。
 <br/>&nbsp &nbsp &nbsp &nbsp 在程总和刘总分别做完战略及战术讲解之后正式进入头脑风暴环节，共分五个小组分别对商务拓展部门标准化、产品功能规划、运营策略及企业文化四个方面进行了长达一天半的头脑风暴，整个头脑风暴期间所有同仁都以极大的热情积极参与讨论，为公司的各项目标推进工作出谋划策，提出了自己的宝贵意见，头脑风暴环节结束之后总共收集超过一百项建议，经过各小组激烈的讨论以及程总和各小组之间的评审，最后由技术中心陈振担当组长的美女与野兽队获得本次头脑风暴的冠军。
 会后，海德在线举行了集体庆功晚宴，程总在晚宴之前做了简短发言，程总说：我们这次脑风暴会议讨论的热情激烈程度，以及对各项问题讨论的深入度是出乎我的意料之外的，海德在线的各位同仁给了我一个惊喜，也让我看到了我们所有伙伴对于海德在线这份事业的认可，海德在线在所有同仁的不懈努力将会让海德在线这艘大船快速驶向成功的彼岸。晚宴上，公司对技术部门以及头脑风暴冠军组送出了奖励。而海德在线第一次公司战略级全员头脑风暴会议也在觥筹交错欢声笑语中圆满落幕。</p>
